--- a/src/css/Responsive.css
+++ b/src/css/Responsive.css
@@ -155,13 +155,6 @@
 		margin-bottom: 5px !important;
 		width: 100% !important;
 	}
-	.logo-nav {
-		width: 80% !important;
-	}
-	.navbar-brand {
-		margin-right: 0 !important;
-		padding-right: 0 !important;
-	}
 	.gg-btn-outline-white {
 		margin: 5px auto;
 		overflow: auto;
@@ -177,6 +170,7 @@
 	}
 	.btn-outline-white {
 		display: inline-flex !important;
+		width: 100% !important;
 	}
 }
 @media (min-width: 600px) {
